feat/adiciona-ts-e-vite

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <title>Taiga Sprint Burndown v.0.1</title>
   <meta charset="UTF-8">
-  <script src="popup.js"></script>
+  <script src="src/popup.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 
