--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,13 @@
           </div>
         </li>
       </ul>
+      <table id="members-info">
+        <tr>
+          <th>Membro</th>
+          <th>Tasks</th>
+          <th>Horas</th>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
