adiciona botão de copiar conteudo

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
     <p id="error">Site inválido.</p>
     <div id="content">
       <button id="refresh">Refresh</button>
-      <button id="copyData">Copy</button>
+      <button id="copyData" disabled>Copy</button>
       <ul id="data">
         <li><strong>SQUAD:</strong> <span id="squad-name"></span></li>
         <li><strong>DURATION:</strong> <span id="duration"></span></li>
