--- a/popup.html
+++ b/popup.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taiga Sprint Burndown v.0.1</title>
+    <title>Taiga Sprint Burndown v.0.2</title>
     <script type="module" src="src/popup/main.ts"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Taiga Sprint Burndown</h1>
-    <p class="dantinhas">v0.1 - author: Eduardo Dantas</p>
+    <ul class="dantinhas">v0.2 - Authors:
+      <li>Eduardo Dantas</li>
+      <li>Daniel Vinicius</li>
+      <li>Vinicius Yuri</li>
+      <li>Emanoel Mattos</li>
+    </ul>
     <p id="error">Site inválido.</p>
     <div id="content">
       <button id="refresh">Refresh</button>
