--- a/popup.html
+++ b/popup.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taiga Sprint Burndown v.0.2</title>
+    <title>Taiga Sprint Burndown v.0.3</title>
     <script type="module" src="src/popup/main.ts"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <span id="badge"></span>
     <h1>Taiga Sprint Burndown</h1>
-    <ul class="dantinhas">v0.2 - Authors:
-      <li>Eduardo Dantas</li>
-      <li>Daniel Vinicius</li>
-      <li>Vinicius Yuri</li>
-      <li>Emanoel Mattos</li>
-    </ul>
+    <div class="wrapper">
+      <ul class="dantinhas">v0.3 - Authors:
+        <li><img src="public/dolphin.svg">Eduardo Dantas</li>
+        <li><img src="public/dolphin.svg">Daniel Vinicius</li>
+        <li><img src="public/dolphin.svg">Vinicius Yuri</li>
+        <li><img src="public/dolphin.svg">Emanoel Mattos</li>
+      </ul>
+      <button id="copyData" disabled>
+        COPY
+        <img src="public/copy.svg">
+      </button>
+    </div>
     <p id="error">Site inválido.</p>
     <div id="content">
       <button id="refresh">Refresh</button>
-      <button id="copyData" disabled>Copy</button>
     </div>
   </body>
 </html>
